feat(InputView): y/n 입력 시 대/소문자 구별 해제